# chameleon-log

./: .gitignore  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  LICENSE  README.rst  agents.md  justfile  pyproject.toml  test_logbook_processor.py
.github/workflows/: ci.yml
docs/: advanced.rst  api-ref.rst  conf.py  index.rst  simple.rst
examples/: README.md  auto-detect-handler.py  cli-app.py  cli-progress-bar.py  cli-rich-tracebacks.py  cli-simple.py  journald-extra-fields.py  journald-simple.py
src/chameleon_log/: __init__.py  detectors.py  journald.py  legacy.py  renderer.py  rich.py
tests/: test_journald_handler.py  test_renderer.py  test_rich_handler.py
